--- a/app/src/main/res/layout/activity_blog_post_detail.xml
+++ b/app/src/main/res/layout/activity_blog_post_detail.xml
@@ -65,7 +65,7 @@
         android:id="@+id/add_comment_edit_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        android:layout_marginHorizontal="8dp"
         android:layout_marginBottom="3dp"
         android:background="@drawable/edit_text_bg"
         android:hint="Add a comment..."
@@ -78,6 +78,7 @@
         android:id="@+id/add_comment_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="8dp"
         android:text="Add Comment"
         android:textColor="@color/md_theme_dark_onPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
