--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,5 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -65,7 +64,6 @@
                 android:id="@+id/loginButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/passwordEditText"
                 android:layout_marginHorizontal="12dp"
                 android:padding="16dp"
                 android:text="@string/login"
@@ -78,10 +76,8 @@
 
                 <TextView
                     android:id="@+id/forgotPasswordTextView"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/loginButton"
-                    android:layout_alignParentEnd="true"
                     android:layout_weight="1"
                     android:padding="16dp"
                     android:text="@string/forgot_password"
@@ -92,8 +88,6 @@
                     android:id="@+id/createAccountTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/loginButton"
-                    android:layout_alignParentStart="true"
                     android:padding="16dp"
                     android:text="@string/create_account"
                     android:textColor="@color/md_theme_dark_onBackground"
@@ -106,8 +100,6 @@
                 style="@style/Widget.Material3.Button.OutlinedButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/forgotPasswordTextView"
-                android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
                 android:layout_marginBottom="12dp"
                 android:padding="16dp"
