--- a/app/src/main/res/layout/item_category_layout.xml
+++ b/app/src/main/res/layout/item_category_layout.xml
@@ -30,7 +30,7 @@
             android:id="@+id/category_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scrollbars="none"></androidx.recyclerview.widget.RecyclerView>
+            android:scrollbars="none" />
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
