--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -23,7 +23,7 @@
                 android:id="@+id/comment_author"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Author"
+                android:text="@string/author"
                 android:textAppearance="?attr/textAppearanceSubtitle1"
                 android:textColor="?attr/colorOnSurface" />
         </LinearLayout>
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="Timestamp"
+            android:text="@string/timestamp"
             android:textAppearance="?attr/textAppearanceCaption" />
 
         <TextView
@@ -41,7 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Comment text"
+            android:text="@string/comment_text"
             android:textAppearance="?attr/textAppearanceBody1" />
 
     </LinearLayout>
